[package]
name = "opendal-parquet-io"
version = "0.0.0"

categories = ["command-line-utilities"]
description = "`opendal-parquet-io` is the adapter for [parquet](https://docs.rs/parquet) IO operations."
documentation = "https://docs.rs/opendal-parquet-io"
repository = "https://github.com/upondal/opendal-parquet-io"
edition = "2021"
license = "Apache-2.0"

[dependencies]
